git commit -am "selenium"

--- a/members/templates/about.html
+++ b/members/templates/about.html
@@ -46,13 +46,13 @@
                     <img src="{% static 'member3.jpg' %}" alt="成員3" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
                     <h4>黃芷翎</h4>
                     <p>Email: <a href="mailto:s7262370@gmail.com">s7262370@gmail.com</a></p>
-                    <p>Line ID: <a href="line://ti/p/@abc123rfv">rfvtyujmm</a></p>
+                    <p>Line ID: <a href="line://ti/p/@abc123rfv">zhiling123</a></p>
                     <p>個人介紹：喜歡文化交流，樂於分享各地的特色。</p>
                 </div>
                 <div class="col" style="flex: 1 1 30%; padding: 10px; text-align: center;">
                     <img src="{% static 'member4.jpg' %}" alt="成員4" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
-                    <h4>成員4</h4>
-                    <p>Email: <a href="mailto:member4@example.com">member4@example.com</a></p>
+                    <h4>張齡文</h4>
+                    <p>Email: <a href="linwen6139@gmail.com">linwen6139@gmail.com</a></p>
                     <p>Line ID: <a href="line://ti/p/@member4lineid">member4lineid</a></p>
                     <p>個人介紹：對於美食旅遊情有獨鍾，喜歡嘗試各地美食。</p>
                 </div>
