--- a/members/templates/about.html
+++ b/members/templates/about.html
@@ -58,8 +58,8 @@
                 </div>
                 <div class="col" style="flex: 1 1 30%; padding: 10px; text-align: center;">
                     <img src="{% static 'member5.jpg' %}" alt="成員5" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
-                    <h4>成員5</h4>
-                    <p>Email: <a href="mailto:member5@example.com">member5@example.com</a></p>
+                    <h4>張家澤</h4>
+                    <p>Email: <a href="mailto:b0955373672@gmail.com">b0955373672@gmail.com</a></p>
                     <p>Line ID: <a href="line://ti/p/@member5lineid">member5lineid</a></p>
                     <p>個人介紹：喜愛登山健行，喜歡挑戰各種戶外活動。</p>
                 </div>
