--- a/members/templates/tourdetail.html
+++ b/members/templates/tourdetail.html
@@ -294,7 +294,11 @@
       <div class="col-md-12 mb-3">
         <div class="card" style="padding: 10px; display: flex; align-items: flex-start;">
           <div class="user-info d-flex align-items-center me-3">
+            {% if rating.user_name.profile.avatar %}
             <img src="{{ rating.user_name.profile.avatar.url }}" alt="{{ rating.user_name.username }}" class="rounded-circle" style="width: 50px; height: 50px;">
+            {% else %}
+            <img src="{% static 'avatars/image.png' %}" alt="{{ rating.user_name.username }}" class="rounded-circle" style="width: 50px; height: 50px;">
+            {% endif %}
             <div class="ms-2">
               <h5 class="mb-0">{{ rating.user_name.username }}</h5>
               <div class="rating" style="font-size: 12px;">
